[package]
authors = ["ysouyno <ysouyno@163.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Check if the executable file is 32-bit or 64-bit on windows."
edition = "2018"
keywords = ["pe", "32-bit", "64-bit", "machine"]
license = "MIT"
name = "x96check"
readme = "README.md"
repository = "https://github.com/ysouyno/x96check"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
